# AI_lab_1

./: .gitignore  CMakeLists.txt  main.cpp  recources.rc  resource.qrc
chess/: CMakeLists.txt  chess.cpp  chess.h  chess.ui
chess/cell/: CMakeLists.txt  cell.cpp  cell.h  cell.ui
my_algorithm/: CMakeLists.txt  MyAlgorithm.cpp  MyAlgorithm.h
vidpal/: CMakeLists.txt  vidpal.cpp  vidpal.h
